--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
 {
   "name": "full-stack-api",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
-    "start": "node server.js",
-    "test": "mocha --exit",
-    "server": "nodemon server.js",
-    "serve": "nodemon server.js",
-    "s": "nodemon server.js",
-    "debug-server": "DEBUG=express:* nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ajevans451/full-stack-api.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ajevans451/full-stack-api/issues"
+  },
+  "homepage": "https://github.com/ajevans451/full-stack-api#readme",
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
+    "mongoose": "^5.10.13",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "eslint": "^6.7.2",
-    "mocha": "^6.2.2",
-    "nodemon": "^2.0.2",
-    "standard": "^14.3.1"
-  },
-  "engines": {
-    "node": "10.15.0",
-    "npm": "6.4.1"
   }
 }
