--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "passport": "^0.4.1",
